refactor(mentor): unify verification, discovery, and booking flows